# gir-format-check

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: check_gir.rs  errors.rs  lib.rs  utils.rs
